--- a/src/app/component/todos/todos.component.scss
+++ b/src/app/component/todos/todos.component.scss
@@ -17,9 +17,9 @@
 .todo .content {
     flex: 1 1 100%;
 }
-.todo.done .content{
-    text-decoration: line-through;
-}
+// .todo.done .content{
+//     text-decoration: line-through;
+// }
 
 .todo-input {
     display: block;
@@ -42,7 +42,7 @@
     outline: none;
     background: none;
 
-    background-color: #fe4880;
+    background-color: rgb(28, 28, 235);
     color : #FFF;
     margin: 15px auto;
 
