--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    margin : center ;
+    padding: center ;
+    box-sizing: border-box ;
+    font-family: sans-serif;
+}
